--- a/ProductService/pom.xml
+++ b/ProductService/pom.xml
@@ -53,6 +53,8 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
+			<version>1.18.30</version> <!-- or latest -->
+			<scope>provided</scope>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
