--- a/KafkaConsumer/src/main/resources/application.properties
+++ b/KafkaConsumer/src/main/resources/application.properties
@@ -1,4 +1,12 @@
 spring.application.name=KafkaConsumer
+server.port=8082
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/product
+spring.datasource.username=postgres
+spring.datasource.password=9911
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=order-management-group
